# STGPSReciever

./: CMakeLists.txt
data/: 2017-7-2  2017-7-3
src/: CMakeLists.txt  STGPSReciever.cpp  STGPSReciever.h  Server.cpp
